After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690124 - Directsound plugins fail to compile
Directsound plugins fail to compile
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Windows
: Normal major
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-12 21:03 UTC by LRN
Modified: 2012-12-12 22:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ext/sys Compilation errors caused by circular includes strike back! (1.62 KB, patch)
2012-12-12 21:08 UTC, LRN
committed Details | Review

Description LRN 2012-12-12 21:03:40 UTC
Started after [1].
Affects directsound/waveform plugins in -good and directsound plugin(s?) in -bad
Comment 1 LRN 2012-12-12 21:04:47 UTC
Uh... the [1] from previous comment was [1].

[1] http://cgit.freedesktop.org/gstreamer/gst-plugins-good/commit/?id=0726b71ceb6edc21b85dda493cf7779fbae6168a
Comment 2 LRN 2012-12-12 21:08:08 UTC
Created attachment 231417 [details] [review]
ext/sys  Compilation errors caused by circular includes strike back!
Comment 3 Tim-Philipp Müller 2012-12-12 22:44:08 UTC
Thanks!

commit fc81ddc8eeb37859be6ca3721709c636b9d2a20b
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Thu Dec 13 01:02:34 2012 +0400

    directsound, waveform: fix compilation errors caused by circular includes
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690124