directsound, waveform: fix compilation errors caused by circular includes

https://bugzilla.gnome.org/show_bug.cgi?id=690124